# openspawn

./: .gitignore  AGENTS.md  LICENSE  OpenSpawn.command  README.md  TODOS.md  main.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
OpenSpawn.app/Contents/: Info.plist
OpenSpawn.app/Contents/MacOS/: droplet
OpenSpawn.app/Contents/Resources/: droplet.icns  droplet.rsrc
OpenSpawn.app/Contents/Resources/Scripts/: main.scpt
OpenSpawn.app/Contents/_CodeSignature/: CodeResources
docs/: beta-release-checklist.md  github-beta-launch-plan.md  github-beta-release-notes-draft.md  next-session-handoff.md  openspawn-vnext-agentic-roadmap.md  test-plan-openspawn-stage0.md
openspawn/: __init__.py  ai.py  app_bundle.py  cli.py  context.py  extractor.py  launcher.py  scanner.py  session.py  skills.py  store.py  types.py  utils.py
tools/: generate_spawn_icon.py
website/: index.html
